fixed spacing issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -144,7 +144,7 @@ body {
 
 .thumb_right {
 	max-width: 180px;
-	max-height: 74px;
+	max-height: 64px;
 	width: auto;
 	height: auto;
 	float: right;
